package com.tunepruner.fourwards.gui.cell;

public class CellDesign {
    int width;
    int height;
    int padding;
    public void createDesign(){}
}
