package com.tunepruner.fourwards.gui.cell;

import java.util.List;

public class CellList<T extends Cell> {
    List<T> cells;
    public void moveTo(T cell, int index) {
    }
    public void remove(T cell) {
    }
    public void add(T cell) {
    }
    public boolean contains(T cell) {
        return false;
    }
    public int indexOf(T cell) {
        return -1;
    }
}
