package com.tunepruner.fourwards.gui.cell;

public interface CellMouseBehavior {
    public void setOnMouseOver();

    public void setOnMouseClicked();

    public void setOnMousePressed();

    public void setOnMouseDragged();

    public void setOnMouseReleased();

}

