package com.tunepruner.fourwards.gui.cell;

import java.awt.*;

public class CellPlacement {
    Point placement;
    public void setPosition() {
    }

    public Point getPosition() {
        return null;
    }
}
